--- a/ContactForm/ContactForm.csproj
+++ b/ContactForm/ContactForm.csproj
@@ -49,6 +49,8 @@
       <HintPath>..\packages\EntityFramework.4.1.10331.0\lib\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="System.Data.Entity" />
+    <Reference Include="System.DirectoryServices" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
@@ -87,6 +89,7 @@
   <ItemGroup>
     <Content Include="Content\Close Button.png" />
     <Content Include="Content\Loading.gif" />
+    <Content Include="Content\RhinestoneEmpire.jpg" />
     <Content Include="Content\themes\base\images\bg-fade.jpg" />
     <Content Include="Content\themes\base\images\bird-dog-logo.png" />
     <Content Include="Content\themes\base\images\coastal-flow-logo-measurement.png" />
